--- a/OracleStructExporter.Core/OracleStructExporter.Core.csproj
+++ b/OracleStructExporter.Core/OracleStructExporter.Core.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Logger.cs" />
     <Compile Include="ProgressDataManager.cs" />
     <Compile Include="SchemaWorkStat.cs" />
+    <Compile Include="SchemaWorkAggrStat.cs" />
     <Compile Include="SettingsHelper.cs" />
     <Compile Include="DBStructs\ColumnComment.cs" />
     <Compile Include="DBStructs\ConstraintColumnStruct.cs" />
@@ -98,6 +99,7 @@
     <Compile Include="Settings\DBLog.cs" />
     <Compile Include="Settings\OSESettings.cs" />
     <Compile Include="Settings\SchedulerSettings.cs" />
+    <Compile Include="TextTableBuilder.cs" />
     <Compile Include="ThreadInfo.cs" />
     <Compile Include="FilesManager.cs" />
     <Compile Include="VcsManager.cs" />
