Утилита для расчета снимка на дату или номер коммита

--- a/VcsManager.WinForm/VcsManager.WinForm.csproj
+++ b/VcsManager.WinForm/VcsManager.WinForm.csproj
@@ -54,7 +54,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VcsManager.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -82,7 +81,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="XMLFile1.xml" />
+    <ProjectReference Include="..\ServiceCheck.Core\ServiceCheck.Core.csproj">
+      <Project>{81c4aa3d-a522-41b7-88f1-d3a519597b76}</Project>
+      <Name>ServiceCheck.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
