Определение необходимости явного указания списка полей в представлениях

--- a/ServiceCheck.Core/ServiceCheck.Core.csproj
+++ b/ServiceCheck.Core/ServiceCheck.Core.csproj
@@ -120,6 +120,7 @@
     <Compile Include="TP\HData.cs" />
     <Compile Include="TP\Processor.cs" />
     <Compile Include="VcsManager.cs" />
+    <Compile Include="ViewColumnComparator.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
