--- a/ServiceCheck.Core/ServiceCheck.Core.csproj
+++ b/ServiceCheck.Core/ServiceCheck.Core.csproj
@@ -52,22 +52,32 @@
     <Compile Include="DBStructs\SchedulerJobArgument.cs" />
     <Compile Include="DBStructs\SchedulerJob.cs" />
     <Compile Include="DBStructs\TableIdentityColumnStruct.cs" />
+    <Compile Include="DbWorkerOuter.cs" />
     <Compile Include="DDLCreator.cs" />
     <Compile Include="Enums.cs" />
+    <Compile Include="ExporterOuter.cs" />
+    <Compile Include="ExportProgressChangedEventArgsOuter.cs" />
+    <Compile Include="ExportProgressDataOuter.cs" />
     <Compile Include="ExportProgressDataLevel.cs" />
+    <Compile Include="ExportProgressDataStageOuter.cs" />
     <Compile Include="ExportProgressDataStage.cs" />
+    <Compile Include="LoggerOuter.cs" />
     <Compile Include="Logger.cs" />
+    <Compile Include="ObjectTypeName.cs" />
+    <Compile Include="PrognozBySchemaOuter.cs" />
     <Compile Include="Progress.cs" />
+    <Compile Include="ProgressDataManagerOuter.cs" />
     <Compile Include="ProgressDataManager.cs" />
     <Compile Include="RepoChangeCommitGroupInfo.cs" />
     <Compile Include="RepoChangeDbSchemaGroupInfo.cs" />
     <Compile Include="RepoChangeItem.cs" />
     <Compile Include="RepoChangeObjAndOperGroupInfo.cs" />
+    <Compile Include="SchemaWorkAggrFullStatOuter.cs" />
     <Compile Include="SchemaWorkAggrFullStat.cs" />
     <Compile Include="AppWorkStat.cs" />
     <Compile Include="CommitStat.cs" />
+    <Compile Include="SchemaWorkStatOuter.cs" />
     <Compile Include="SchemaWorkStat.cs" />
-    <Compile Include="SchemaWorkAggrStat.cs" />
     <Compile Include="SettingsHelper.cs" />
     <Compile Include="DBStructs\ColumnComment.cs" />
     <Compile Include="DBStructs\ConstraintColumnStruct.cs" />
@@ -84,10 +94,14 @@
     <Compile Include="DBStructs\PartOrSubPartKeyColumns.cs" />
     <Compile Include="PrognozBySchema.cs" />
     <Compile Include="Settings\ConnectionForIgnoreDiff.cs" />
+    <Compile Include="Settings\ConnectionOuterToProcess.cs" />
+    <Compile Include="Settings\ConnectionsOuterToProcess.cs" />
     <Compile Include="Settings\FileForIgnoreDiff.cs" />
     <Compile Include="Settings\GitLabRepo.cs" />
     <Compile Include="Settings\IgnoreDifferences.cs" />
     <Compile Include="Settings\LineRuleForIgnoreDiff.cs" />
+    <Compile Include="Settings\SchedulerOuterSettings.cs" />
+    <Compile Include="Settings\DbOuter.cs" />
     <Compile Include="Settings\WinAppSettings.cs" />
     <Compile Include="Settings\SimpleFileRepo.cs" />
     <Compile Include="Settings\LogType.cs" />
@@ -115,6 +129,7 @@
     <Compile Include="Settings\OSESettings.cs" />
     <Compile Include="Settings\SchedulerSettings.cs" />
     <Compile Include="TableBuilder.cs" />
+    <Compile Include="ThreadInfoOuter.cs" />
     <Compile Include="ThreadInfo.cs" />
     <Compile Include="FilesManager.cs" />
     <Compile Include="TP\HData.cs" />
